--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,12 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+
+# client
+node_modules
+
+#system
+.DS_Store
+
+# IDE
+.idea
