--- a/nginx.conf
+++ b/nginx.conf
@@ -26,15 +26,23 @@ server {
         proxy_set_header X-Forwarded-Host  $http_host;
         proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
 
-
         rewrite ^/api/(.*)$ /$1 break;
+
         proxy_pass http://api:8080;
     }
 
     location / {
-        proxy_hide_header Content-Type;
-        proxy_pass http://minio:9000;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Host $http_host;
 
-        client_max_body_size 2G;
+        proxy_connect_timeout 300;
+
+        proxy_http_version 1.1;
+        proxy_set_header Connection "";
+        chunked_transfer_encoding off;
+
+        proxy_pass http://minio:9000;
     }
 }
